# docs/swagger.json
@@ -57,6 +57,60 @@
             }
         },
         "/api/v1/out_messages": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get list out messages",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Out Messages"
+                ],
+                "summary": "get list out messages",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "origin_code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "origin_model",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "routing_key",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -81,7 +135,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.OutMsgBodyParam"
+                            "$ref": "#/definitions/schema.OutMsgCreateParam"
                         }
                     }
                 ],
@@ -292,7 +346,7 @@
                 }
             }
         },
-        "schema.OutMsgBodyParam": {
+        "schema.OutMsgCreateParam": {
             "type": "object",
             "required": [
                 "payload",
@@ -313,6 +367,23 @@
                 "routing_key": {
                     "type": "string",
                     "example": "routing.key"
+                }
+            }
+        },
+        "schema.OutMsgQueryParam": {
+            "type": "object",
+            "properties": {
+                "origin_code": {
+                    "type": "string"
+                },
+                "origin_model": {
+                    "type": "string"
+                },
+                "routing_key": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
